# tree-sitter-go-sum

./: CHANGELOG.md  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json
.github/workflows/: release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: gosum.h
queries/: highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
