[package]
name = "tree-sitter-go-sum"
description = "gosum grammar for tree-sitter"
version = "0.0.1"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "gosum"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-gosum"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
